class FoodUnit {
  name: string;
  description: string;
  img: string;

  constructor(name: string, description: string, img: string) {
    this.name = name;
    this.description = description;
    this.img = img;
  }
}

export default FoodUnit;